[package]
name = "gas-estimator"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["json"] }
http = "1.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
web3 = { version = "0.19", features = ["http"] }

[dev-dependencies]
web3 = { version = "0.19", features = ["test"] }
